--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "devDependencies": {
     "better-docs": "^2.7.2",
+    "dockerode": "^4.0.0",
+    "jest": "^29.7.0",
     "jsdoc": "^4.0.2",
+    "minio": "^7.1.3",
     "njs-types": "^0.8.1",
+    "supertest": "^6.3.3",
     "taffydb": "^2.7.3"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
