--- a/test/docker-compose.yaml
+++ b/test/docker-compose.yaml
@@ -30,8 +30,8 @@ services:
       ALLOW_DIRECTORY_LIST:
       PROVIDE_INDEX_PAGE:
       APPEND_SLASH_FOR_POSSIBLE_DIRECTORY:
-      STRIP_LEADING_DIRECTORY_PATH:
-      PREFIX_LEADING_DIRECTORY_PATH:
+      STRIP_LEADING_DIRECTORY_PATH: ""
+      PREFIX_LEADING_DIRECTORY_PATH: ""
       AWS_SIGS_VERSION: "4"
       STATIC_SITE_HOSTING:
       PROXY_CACHE_MAX_SIZE: "10g"
