--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@types/supertest": "^6.0.2",
     "better-docs": "^2.7.2",
+    "convict": "^6.2.4",
     "jest": "^29.7.0",
     "jsdoc": "^4.0.2",
     "minio": "^7.1.3",
     "njs-types": "^0.8.1",
     "supertest": "^6.3.3",
-    "taffydb": "^2.7.3"
+    "taffydb": "^2.7.3",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.3"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest --runInBand"
   }
 }
