--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -277,11 +277,12 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
-            # nginxinc/nginx-s3-gateway:latest-${{ steps.date.outputs.date }}-new-build-test
-            # nginxinc/nginx-s3-gateway:latest-new-build-test
             ghcr.io/$GITHUB_REPOSITORY/nginx-oss-s3-gateway:latest-${{ steps.date.outputs.date }}-new-build-test
             ghcr.io/$GITHUB_REPOSITORY/nginx-oss-s3-gateway:latest-new-build-test
       
+  # Dockerhub tags
+  # nginxinc/nginx-s3-gateway:latest-${{ steps.date.outputs.date }}-new-build-test
+  # nginxinc/nginx-s3-gateway:latest-new-build-test
 
   #         path: /tmp
   #     - name: Download artifact - unprivileged
