--- a/test/docker-compose.yaml
+++ b/test/docker-compose.yaml
@@ -31,6 +31,7 @@ services:
       AWS_SIGS_VERSION:
       STATIC_SITE_HOSTING:
       PROXY_CACHE_MAX_SIZE: "10g"
+      PROXY_CACHE_SLICE_SIZE "1m"
       PROXY_CACHE_INACTIVE: "60m"
       PROXY_CACHE_VALID_OK: "1h"
       PROXY_CACHE_VALID_NOTFOUND: "1m"
