feature: add support for S3 Express #225

--- a/common/etc/nginx/nginx.conf
+++ b/common/etc/nginx/nginx.conf
@@ -12,6 +12,7 @@ load_module modules/ngx_http_xslt_filter_module.so;
 env AWS_ACCESS_KEY_ID;
 env AWS_SECRET_ACCESS_KEY;
 env AWS_SESSION_TOKEN;
+env S3_SERVICE;
 env S3_BUCKET_NAME;
 env S3_SERVER;
 env S3_SERVER_PORT;
