move back to not including bucket in s3 address for express zone

--- a/.gitignore
+++ b/.gitignore
@@ -386,5 +386,5 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
-
+.tfplan
 # End of https://www.toptal.com/developers/gitignore/api/terraform
