--- a/deployments/s3_express/settings.s3express.example
+++ b/deployments/s3_express/settings.s3express.example
@@ -7,6 +7,7 @@ S3_SERVER_PORT=443
 S3_SERVER_PROTO=https
 S3_REGION=us-west-2
 S3_STYLE=virtual
+S3_SERVICE=s3express
 DEBUG=true
 AWS_SIGS_VERSION=4
 ALLOW_DIRECTORY_LIST=false
