--- a/settings.example
+++ b/settings.example
@@ -7,6 +7,7 @@ S3_SERVER_PORT=443
 S3_SERVER_PROTO=https
 S3_REGION=us-east-1
 S3_STYLE=virtual
+S3_SERVICE=s3
 DEBUG=false
 AWS_SIGS_VERSION=4
 ALLOW_DIRECTORY_LIST=false
