--- a/settings.example
+++ b/settings.example
@@ -6,7 +6,7 @@ S3_SERVER=s3.us-east-1.amazonaws.com
 S3_SERVER_PORT=443
 S3_SERVER_PROTO=https
 S3_REGION=us-east-1
-S3_STYLE=virtual
+S3_STYLE=virtual-v2
 S3_SERVICE=s3
 DEBUG=false
 AWS_SIGS_VERSION=4
