--- a/deployments/s3_express/settings.s3express.example
+++ b/deployments/s3_express/settings.s3express.example
@@ -1,14 +1,14 @@
-S3_BUCKET_NAME=my-bucket
+S3_BUCKET_NAME=my-bucket-name--usw2-az1--x-s3
 AWS_ACCESS_KEY_ID=ZZZZZZZZZZZZZZZZZZZZ
 AWS_SECRET_ACCESS_KEY=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
 AWS_SESSION_TOKEN=bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
-S3_SERVER=s3.us-east-1.amazonaws.com
+S3_SERVER=s3express-usw2-az1.us-west-2.amazonaws.com
 S3_SERVER_PORT=443
 S3_SERVER_PROTO=https
-S3_REGION=us-east-1
+S3_REGION=us-west-2
 S3_STYLE=virtual-v2
-S3_SERVICE=s3
-DEBUG=false
+S3_SERVICE=s3express
+DEBUG=true
 AWS_SIGS_VERSION=4
 ALLOW_DIRECTORY_LIST=false
 PROVIDE_INDEX_PAGE=false
@@ -20,4 +20,3 @@ PROXY_CACHE_INACTIVE=60m
 PROXY_CACHE_VALID_OK=1h
 PROXY_CACHE_VALID_NOTFOUND=1m
 PROXY_CACHE_VALID_FORBIDDEN=30s
-STRIP_LEADING_DIRECTORY_PATH=/somepath
