--- a/test/docker-compose.yaml
+++ b/test/docker-compose.yaml
@@ -22,7 +22,8 @@ services:
       S3_SERVER_PROTO: "http"
       S3_REGION: "us-east-1"
       DEBUG: "true"
-      S3_STYLE: "virtual"
+      S3_STYLE: "${S3_STYLE:-virtual-v2}"
+      S3_SERVICE: "s3"
       ALLOW_DIRECTORY_LIST:
       PROVIDE_INDEX_PAGE:
       APPEND_SLASH_FOR_POSSIBLE_DIRECTORY:
@@ -39,6 +40,7 @@ services:
 
   minio:
     image: quay.io/minio/minio:RELEASE.2023-06-09T07-32-12Z
+    hostname: bucket-1.minio
     ports:
       - "9090:9000/tcp"
     restart: "no"
