--- a/Dockerfile.oss
+++ b/Dockerfile.oss
@@ -11,6 +11,7 @@ ENV PROXY_CACHE_VALID_OK "1h"
 ENV PROXY_CACHE_VALID_NOTFOUND "1m"
 ENV PROXY_CACHE_VALID_FORBIDDEN "30s"
 ENV CORS_ENABLED 0
+ENV CORS_ALLOW_PRIVATE_NETWORK_ACCESS ""
 ENV DIRECTORY_LISTING_PATH_PREFIX ""
 ENV STRIP_LEADING_DIRECTORY_PATH ""
 ENV PREFIX_LEADING_DIRECTORY_PATH ""
