--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ permissions: read-all
 
 jobs:
   build-oss-for-test:
+    name: Build NGINX OSS image
     runs-on: ubuntu-22.04
     steps:
       - name: Check out the codebase
@@ -49,6 +50,7 @@ jobs:
           if-no-files-found: error
 
   test-oss:
+    name: Test NGINX OSS image
     runs-on: ubuntu-22.04
     needs: build-oss-for-test
     strategy:
@@ -91,6 +93,7 @@ jobs:
         run: S3_STYLE=${{ matrix.path_style }} ./test.sh --type oss
 
   build-latest-njs-for-test:
+    name: Build NGINX OSS image using latest njs commit
     runs-on: ubuntu-22.04
     needs: test-oss
     steps:
@@ -134,6 +137,7 @@ jobs:
           if-no-files-found: error
 
   test-latest-njs:
+    name: Test NGINX OSS image using latest njs commit
     runs-on: ubuntu-22.04
     needs: build-latest-njs-for-test
     steps:
@@ -174,6 +178,7 @@ jobs:
         run: ./test.sh --latest-njs --type oss
 
   build-unprivileged-for-test:
+    name: Build NGINX OSS unprivileged image
     runs-on: ubuntu-22.04
     needs: test-oss
     steps:
@@ -217,6 +222,7 @@ jobs:
           if-no-files-found: error
 
   test-unprivileged:
+    name: Test NGINX OSS unprivileged image
     runs-on: ubuntu-22.04
     needs: build-unprivileged-for-test
     steps:
@@ -258,6 +264,7 @@ jobs:
 
 # As a last step (only if run from main) multi-architecture images are built and pushed to Docker Hub and the GitHub Container Registry
   tag-and-push:
+    name: Tag and push all built and tested NGINX images
     runs-on: ubuntu-22.04
     needs: [test-oss, test-latest-njs, test-unprivileged]
     if: |
